# spell_corrector

./: .cursorignore  .gitignore  FIND_BUG.md  LICENSE  README.md  pyproject.toml
config/: input_tokenizer.json  output_tokenizer.json  symbols.json
src/: __init__.py  main.py  model.py  sentence_length_statistics.ipynb  train.py
src/arch/: model copy.py  model.py  positional_encoding.py
src/helper/: autoregressive_generator.py  dataset.py  datasetfrom_lmdb.py  sentence_destructor.py  text_cleaner.py  translation_dataset.py
src/tools/: generate_individual_words.ipynb  generate_input_tokenizer.ipynb  generate_output_tokenizer.ipynb  prepare_dataset.ipynb  test_prepare_dataset.ipynb
