[project]
name = "spell-correction"
version = "0.1.0"
description = "Transform based neural network spell correction model for Uyghur language."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "seaborn>=0.13.2",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
